fixes img horizontal alignment bug

--- a/client/src/Photography/Photography.css
+++ b/client/src/Photography/Photography.css
@@ -15,6 +15,11 @@
     margin-top: 5vh;
 }
 
+#align-button-image {
+    display: flex;
+    justify-content: center;
+}
+
     .image-container img {
         -webkit-box-shadow: 0px 0px 20px 6px rgba(0,0,0,0.5); 
         box-shadow: 0px 0px 20px 6px rgba(0,0,0,0.5);
@@ -39,6 +44,7 @@
     #ADD-PACK-BUTTON {
         background-color: white;
         border: none;
+        padding: 0;
     }
 
         #ADD-PACK-BUTTON:focus, #ADD-PACK-BUTTON:active {
@@ -47,7 +53,7 @@
         }
 
     #image-location {
-        margin-left: 7vw;
+        margin-left: 5vw;
         font-size: 18px;
         letter-spacing: .5em;
         padding-bottom: 15px;
